--- a/package.json
+++ b/package.json
@@ -12,9 +12,9 @@
   "devDependencies": {
     "@vitest/coverage-c8": "^0.29.7",
     "@vitest/ui": "^0.29.7",
+    "cypress": "^12.9.0",
     "typescript": "^4.9.3",
     "vite": "^4.2.0",
     "vitest": "^0.29.7"
-  },
-  "dependencies": {}
+  }
 }
